--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button type="button" class="btn btn-primary m-3" id="input_btn">
             Controlla
         </button>
+        <p id="result"></p>
 
     </div>
 
