(js) add function utility and start exercise 2

--- a/index.html
+++ b/index.html
@@ -17,9 +17,22 @@
             Controlla
         </button>
         <p id="result"></p>
-
     </div>
 
+    <div class="d-flex justify-content-center align-items-center flex-column p-5">
+        <button type="button" class="btn btn-primary" id="pari">
+            Pari
+        </button>
+        <button type="button" class="btn btn-primary" id="dispari">
+            Dispari
+        </button>
+        <input type="number" name="num" id="user_number">
+        <button type="button" class="btn btn-primary" id="check_btn">
+            Controlla
+        </button>
+        <p id="result2"></p>
+
+    </div>
 
 
     <script src="js/script.js"></script>
