(js) correct exercises

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </div>
 
     <div class="d-flex justify-content-center align-items-center flex-column p-5">
-        <button type="button" class="btn btn-primary" id="pari">
+        <button type="button" class="btn btn-primary" id="even">
             Pari
         </button>
-        <button type="button" class="btn btn-primary" id="dispari">
+        <button type="button" class="btn btn-primary" id="odd">
             Dispari
         </button>
         <input type="number" name="num" id="user_number">
